--- a/app/src/main/res/layout/activity_android_me.xml
+++ b/app/src/main/res/layout/activity_android_me.xml
@@ -34,6 +34,15 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"></FrameLayout>
 
+        <FrameLayout
+            android:id="@+id/body_container"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"></FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/leg_container"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"></FrameLayout>
     </LinearLayout>
 
 </ScrollView>
