--- a/app/src/main/res/layout/fragment_master_list.xml
+++ b/app/src/main/res/layout/fragment_master_list.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/master_list_grid"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:numColumns="3"
-    android:columnWidth="180dp"
-    android:gravity="center"
-    android:stretchMode="columnWidth"
-    android:horizontalSpacing="8dp"
-    android:verticalSpacing="8dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <GridView
+        android:id="@+id/master_list_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:numColumns="3"
+        android:columnWidth="180dp"
+        android:gravity="center"
+        android:stretchMode="columnWidth"
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp">
+    </GridView>
 
-</GridView>
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:text="Next"/>
+</LinearLayout>
